[package]
name = "flickrator"
version = "0.1.0"
authors = ["Aaron Lee <alee@aaronosaur.us>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
